# agilecrm_api

./: .gitignore  pyproject.toml
agilecrm_api/: __init__.py  agilecrm.py
tests/: test_agilecrm_api.py
