[tool.poetry]
name = "agilecrm-api"
version = "1.0.1"
description = ""
authors = ["Franccesco Orozco <franccesco@codingdose.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.10.1"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
